# ros2_dual_stepper_controller

./: .gitignore  README.md
firmware/: platformio.ini
firmware/include/: MagneticEncoder.h  SerialComm.h  StepperMotor.h
firmware/src/: MagneticEncoder.cpp  SerialComm.cpp  StepperMotor.cpp  main.cpp
firmware/test/: test_interactive_send_speed.py  test_operational_limits.py  test_read_serial.py
ros2_dual_stepper_controller/: CMakeLists.txt  package.xml  ros2_dual_stepper_controller.xml
ros2_dual_stepper_controller/config/: diff_drive_controllers.yaml
ros2_dual_stepper_controller/description/meshes/: urdf_left_wheel.STL  urdf_right_wheel.STL  urdf_wheel.STL
ros2_dual_stepper_controller/description/urdf/: dual_stepper.ros2_control.xacro  dual_stepper.urdf.xacro
ros2_dual_stepper_controller/description/urdf/robot_parts/: base_link.xacro  wheel.xacro
ros2_dual_stepper_controller/include/ros2_dual_stepper_controller/: dual_stepper_hardware_interface.h  dual_stepper_hardware_interface.hpp  serial_comm.hpp  wheel_joint.hpp
ros2_dual_stepper_controller/launch/: test_hardware.launch.py
ros2_dual_stepper_controller/src/: dual_stepper_hardware_interface.cpp  serial_comm.cpp  wheel_joint.cpp
ros2_dual_stepper_controller/test/: test_encoder_stream.cpp  test_send_cmd.cpp
